force-app/main/default/objects/Bitbucket_Config__mdt/Bitbucket_Config__mdt.object-meta.xml
<CustomObject>
    <label>Bitbucket Config</label>
    <pluralLabel>Bitbucket Configs</pluralLabel>
    <description>Configuration for Bitbucket API integration using API Tokens with Scopes (post Sept 2025).</description>
</CustomObject>