force-app/main/default/objects/Bitbucket_Config__mdt/fields/API_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>API_Base_URL__c</fullName>
    <defaultValue>&quot;https://api.bitbucket.org/2.0&quot;</defaultValue>
    <description>Bitbucket API base URL (typically https://api.bitbucket.org/2.0)</description>
    <label>API Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>