force-app/main/default/objects/Bitbucket_Config__mdt/fields/API_Token__c.field-meta.xml
<CustomField>
    <fullName>API_Token__c</fullName>
    <label>API Token</label>
    <description>Bitbucket API Token with scopes. Create at: Atlassian account → Security → API tokens. Required scope: read:repository:bitbucket</description>
    <inlineHelpText>Create an API Token with "read:repository:bitbucket" scope at Atlassian account settings → Security → Create API token with scopes</inlineHelpText>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>