force-app/main/default/objects/Bitbucket_Config__mdt/fields/Base_Path__c.field-meta.xml
<CustomField>
    <fullName>Base_Path__c</fullName>
    <label>Base Path</label>
    <description>Path to metadata directory in repository (e.g., force-app/main/default)</description>
    <type>Text</type>
    <length>255</length>
    <defaultValue>"force-app/main/default"</defaultValue>
</CustomField>