force-app/main/default/objects/Bitbucket_Config__mdt/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <defaultValue>&quot;main&quot;</defaultValue>
    <description>Git branch to read metadata from (e.g., main, master, develop)</description>
    <label>Branch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>