force-app/main/default/objects/Bitbucket_Config__mdt/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Atlassian account email address (NOT Bitbucket username). Find at: Personal settings → Email Aliases</description>
    <inlineHelpText>Use your Atlassian account email, not your Bitbucket username. This is required for API Token authentication.</inlineHelpText>
    <label>Email</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>