force-app/main/default/objects/Bitbucket_Config__mdt/fields/Repository__c.field-meta.xml
<CustomField>
    <fullName>Repository__c</fullName>
    <description>Bitbucket repository slug (found in URL: bitbucket.org/workspace/{repository}/)</description>
    <label>Repository</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>