force-app/main/default/objects/Bitbucket_Config__mdt/fields/Token_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Token_Expiry__c</fullName>
    <description>Date when the API token expires. Set reminders to rotate before this date.</description>
    <inlineHelpText>API tokens have mandatory expiration. Track this date to rotate tokens before they expire.</inlineHelpText>
    <label>Token Expiry Date</label>
    <type>Date</type>
</CustomField>