force-app/main/default/objects/Bitbucket_Config__mdt/fields/Workspace__c.field-meta.xml
<CustomField>
    <fullName>Workspace__c</fullName>
    <label>Workspace</label>
    <description>Bitbucket workspace slug (found in URL: bitbucket.org/{workspace}/)</description>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
</CustomField>